--- a/task_manager_fe/package.json
+++ b/task_manager_fe/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "vue": "^3.4.18",
-    "vue-resource": "^1.5.3"
+    "vue-resource": "^1.5.3",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
