--- a/task_manager_fe/package.json
+++ b/task_manager_fe/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "vue": "^3.4.18",
     "vue-resource": "^1.5.3",
     "vue-router": "^4.0.13"
